[gd_scene load_steps=8 format=3 uid="uid://clevel000001"]

[ext_resource type="Script" uid="uid://dtj2y1n7xdjhy" path="res://scripts/main/level.gd" id="1"]
[ext_resource type="Script" uid="uid://cl7rihedwfn3f" path="res://scripts/systems/wave_manager.gd" id="2"]
[ext_resource type="Script" uid="uid://dsoktwu7vtw52" path="res://scripts/systems/placement.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://chud00000001" path="res://scenes/ui/hud.tscn" id="4"]
[ext_resource type="Texture2D" path="res://assets/environment/ground_grass.svg" id="5"]

[sub_resource type="Curve2D" id="Curve2D_path"]
_data = {
"points": PackedVector2Array(-20, 0, 20, 0, -50, 200, -15, 0, 15, 0, 150, 200, -10, 0, 10, 0, 150, 400, -15, 0, 15, 0, 400, 400, -10, 0, 10, 0, 400, 200, -15, 0, 15, 0, 700, 200, -10, 0, 10, 0, 700, 500, -15, 0, 15, 0, 1000, 500, -10, 0, 10, 0, 1000, 300, -20, 0, 20, 0, 1151, 301)
}
point_count = 10

[sub_resource type="Gradient" id="Gradient_path"]
offsets = PackedFloat32Array(0, 0.15, 0.85, 1)
colors = PackedColorArray(0.25, 0.18, 0.1, 1, 0.45, 0.32, 0.2, 1, 0.45, 0.32, 0.2, 1, 0.25, 0.18, 0.1, 1)

[node name="Level" type="Node2D" groups=["level"]]
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
z_index = -10
offset_right = 1152.0
offset_bottom = 650.0
texture = ExtResource("5")
expand_mode = 1
stretch_mode = 6

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_path")

[node name="PathVisual" type="Line2D" parent="."]
z_index = -5
width = 60.0
default_color = Color(0.4, 0.28, 0.16, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="PathBorder1" type="Line2D" parent="."]
z_index = -4
width = 68.0
default_color = Color(0.22, 0.15, 0.08, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="PathHighlight" type="Line2D" parent="."]
z_index = -3
width = 40.0
default_color = Color(0.5, 0.36, 0.22, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="Towers" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]

[node name="WaveManager" type="Node" parent="."]
script = ExtResource("2")

[node name="PlacementSystem" type="Node2D" parent="."]
script = ExtResource("3")

[node name="HUD" parent="." instance=ExtResource("4")]
